// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test component: ExpandRow should render properly with supportToggle is FASLE: supportToggle IS FASLE and expanded is True 1`] = `
<div
  className="expand-row"
>
  <div
    className="expand-row-header"
  >
    <div
      className="expand-row-header-icon"
    >
      <span
        className="expand-row-icon expand-row-collapsed"
        onClick={[Function]}
      />
    </div>
    <div
      className="expand-row-header-title "
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`test component: ExpandRow should render properly: supportToggle is TRUE and expanded is false 1`] = `
<div
  className="expand-row"
>
  <div
    className="expand-row-header"
  >
    <button
      aria-checked={false}
      className="ant-switch"
      defaultChecked={false}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="ant-switch-inner"
      />
    </button>
    <div
      className="expand-row-header-icon"
    >
      <span
        className="expand-row-icon expand-row-collapsed"
        onClick={[Function]}
      />
    </div>
    <div
      className="expand-row-header-title "
      onClick={[Function]}
    />
  </div>
</div>
`;
